// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime info getRuntimeInfo() with ast cache = 0 1`] = `
Object {
  "astCache": null,
  "astCacheSize": 0,
  "debug": false,
}
`;

exports[`runtime info getRuntimeInfo() with ast cache > 0 1`] = `
Object {
  "astCache": Cache {
    "_size": 0,
    "cache": Object {},
    "firstEntry": undefined,
    "lastEntry": undefined,
    "maxSize": 10,
  },
  "astCacheSize": 10,
  "debug": false,
}
`;

exports[`runtime info getRuntimeInfo(). 1`] = `
Object {
  "astCache": Cache {
    "_size": 0,
    "cache": Object {},
    "firstEntry": undefined,
    "lastEntry": undefined,
    "maxSize": null,
  },
  "astCacheSize": null,
  "debug": false,
}
`;
